--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,23 @@ h1 {
     position: absolute;
     transform: scale(10%);
 }
+/* #hero:hover::after
+{
+    transform: scale(100%);
+    font-family: Impact;
+    font-size: 240px;
+  content: 'Pseudo Elements';
+  position: relative;
+  color: #8ac4ff;
+  margin-left: 5px;
+
+} */
 #myWorks{
-    display: flex;
+   display: flex;
     flex-direction: row;
     flex-flow: row wrap;
    
-    justify-content: center;
+    justify-content: space-between;
    
     align-items: center;
     width: 90%;
@@ -44,8 +55,13 @@ h1 {
     margin: 0 auto;
     border-style: solid;
     border-width: 2px;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
   
+}
+#showcase{
+    /* flex: auto;  */
+    position: absolute;
+    scale: 200%;
 }
 .secondary{
     display: flex;
@@ -55,14 +71,37 @@ h1 {
     border-style: solid;
     border-width: 1px;
   position: relative;
-  flex: 2 1 200px;
+  flex-direction: column;
   margin: 20px;
   justify-content: space-around;
 }
-#showcase{
+#aboutMe
+{
+    border-style: dashed;
     display: flex;
-    position: relative;
-    transform: scale(200%);
-    justify-content: flex-start;
-    
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    margin: 10%;
+}
+#aboutMe h2{
+    font-size: larger;
+    border-style: solid;
+}
+#aboutMe p{
+    font-size: medium;
+}
+footer{
+    border-style: dashed;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    margin: 10%;
+}
+#contactMe h2
+{
+    font-size: larger;
 }
